--- a/app/components/lhp/left-hand-pane.html
+++ b/app/components/lhp/left-hand-pane.html
@@ -1,4 +1,4 @@
-<div class="lhp">
+<div id="lhp" ng-show="!hideLhp">
   <div class="tab">Menu</div>
   <lhp-tab title="'Home'"></lhp-tab>
   <lhp-tab title="'Weather'"></lhp-tab>
