--- a/app/components/content-header/content-header.html
+++ b/app/components/content-header/content-header.html
@@ -1,3 +1,4 @@
 <div id="app-view-header" class="full-width">
+  <div class="collapse-icon" ng-click="toggleLhp()">&#9776;</div>
   <div class="route-text">{{state.current.name}}</div>
 </div>
