Change the loading image

--- a/app/app.scss
+++ b/app/app.scss
@@ -128,9 +128,9 @@ body {
 }
 
 .weather-container-loading {
-  background: url(loading.gif) no-repeat center center;
-  height: 200px;
-  width: 200px;
+  background: url(loadingcircle.gif) no-repeat center center;
+  height: 180px;
+  width: 350px;
 }
 
 #weather-container {
