--- a/app/components/weather/weather-data.html
+++ b/app/components/weather/weather-data.html
@@ -6,7 +6,7 @@
       <input ng-model="city" class="input-value" type="text">
     </div>
     <div class="weather-row">
-      <div class="input-title">Stafe:</div>
+      <div class="input-title">State:</div>
       <input ng-model="state" class="input-value" type="text">
     </div>
     <div class="weather-row">
