--- a/app/components/breadcrumbs/breadcrumbs.html
+++ b/app/components/breadcrumbs/breadcrumbs.html
@@ -1,5 +1,5 @@
 <div id="breadcrumbs">
-  <div ng-repeat="crumb in breadcrumbs track by crumb.title">
+  <div ng-repeat="crumb in ctrl.breadcrumbs track by crumb.title">
     <a ui-sref="{{crumb.stateName}}">{{crumb.title}}</a>
     <div class="separator">/</div>
   </div>
