--- a/app/components/lhp/lhp-tab.html
+++ b/app/components/lhp/lhp-tab.html
@@ -1,3 +1,3 @@
-<div class="clickable-tab" ng-click="goToRoute(title)">
-  <div class="tab-text">{{title}}</div>
+<div class="clickable-tab" ng-click="ctrl.goToRoute(ctrl.title)">
+  <div class="tab-text">{{ctrl.title}}</div>
 </div>
